--- a/JiraHelper.Core/MainWindow.xaml
+++ b/JiraHelper.Core/MainWindow.xaml
@@ -11,7 +11,12 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <TextBlock Text="Assigned Jira Issues" FontWeight="Bold" FontSize="18" Margin="10"/>
+        <Menu Grid.Row="0">
+            <MenuItem Header="File">
+                <MenuItem Header="Settings" Click="OpenSettings_Click"/>
+            </MenuItem>
+        </Menu>
+        <TextBlock Text="Assigned Jira Issues" FontWeight="Bold" FontSize="18" Margin="10" Grid.Row="0" VerticalAlignment="Bottom"/>
         <ListView x:Name="IssuesList" Grid.Row="1" Margin="10">
             <ListView.View>
                 <GridView>
