--- a/JiraHelper.Core/IssueDetailsWindow.xaml
+++ b/JiraHelper.Core/IssueDetailsWindow.xaml
@@ -11,16 +11,16 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <TextBlock Text="Key:" FontWeight="Bold"/>
-        <TextBlock x:Name="KeyText" Grid.Row="0" Margin="60,0,0,0"/>
+        <TextBlock x:Name="KeyText" Grid.Row="0" Margin="120,0,0,0"/>
         <TextBlock Text="Summary:" Grid.Row="1" FontWeight="Bold"/>
-        <TextBlock x:Name="SummaryText" Grid.Row="1" Margin="60,0,0,0"/>
+        <TextBlock x:Name="SummaryText" Grid.Row="1" Margin="120,0,0,0"/>
         <TextBlock Text="Status:" Grid.Row="2" FontWeight="Bold"/>
-        <TextBlock x:Name="StatusText" Grid.Row="2" Margin="60,0,0,0"/>
+        <TextBlock x:Name="StatusText" Grid.Row="2" Margin="120,0,0,0"/>
         <TextBlock Text="Assignee:" Grid.Row="3" FontWeight="Bold"/>
-        <TextBlock x:Name="AssigneeText" Grid.Row="3" Margin="60,0,0,0"/>
+        <TextBlock x:Name="AssigneeText" Grid.Row="3" Margin="120,0,0,0"/>
         <TextBlock Text="Description:" Grid.Row="4" FontWeight="Bold" Margin="0,10,0,0"/>
         <ScrollViewer Grid.Row="4" Margin="0,30,0,0" VerticalScrollBarVisibility="Auto">
-            <TextBlock x:Name="DescriptionText" TextWrapping="Wrap"/>
+            <TextBlock x:Name="DescriptionText" TextWrapping="Wrap" Margin="120,0,0,0"/>
         </ScrollViewer>
     </Grid>
 </Window>
