--- a/JiraHelper.Core/IssueDetailsView.xaml
+++ b/JiraHelper.Core/IssueDetailsView.xaml
@@ -1,7 +1,7 @@
-<Window x:Class="JiraHelper.Core.IssueDetailsWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Issue Details" Height="400" Width="600">
+<UserControl x:Class="JiraHelper.Core.IssueDetailsView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             Height="400" Width="600">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -23,4 +23,4 @@
             <TextBlock x:Name="DescriptionText" TextWrapping="Wrap" Margin="120,0,0,0"/>
         </ScrollViewer>
     </Grid>
-</Window>
+</UserControl>
