--- a/JiraHelper.Core/SettingsView.xaml
+++ b/JiraHelper.Core/SettingsView.xaml
@@ -1,7 +1,7 @@
-<Window x:Class="JiraHelper.Core.SettingsWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Settings" Height="250" Width="400">
+<UserControl x:Class="JiraHelper.Core.SettingsView"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             Height="250" Width="400">
     <Grid Margin="10">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -25,4 +25,4 @@
 
         <Button Content="Save" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" Width="80" Click="Save_Click"/>
     </Grid>
-</Window>
+</UserControl>
