--- a/JiraHelper.Core/MainWindow.xaml
+++ b/JiraHelper.Core/MainWindow.xaml
@@ -8,9 +8,11 @@
         Title="Jira Helper" Height="700" Width="1300">
     <Window.InputBindings>
         <KeyBinding Key="R" Modifiers="Control" Command="{x:Static local:MainWindow.RefreshCommand}" />
+        <KeyBinding Key="S" Modifiers="Control" Command="{x:Static local:MainWindow.ShowSearchCommand}" />
     </Window.InputBindings>
     <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -19,18 +21,21 @@
         <Menu Grid.Row="0">
             <MenuItem Header="File">
                 <MenuItem Header="Settings" Click="OpenSettings_Click"/>
+                <MenuItem Header="Search" Click="ToggleSearch_Click" InputGestureText="Ctrl+S"/>
                 <MenuItem Header="Refresh" Click="Refresh_Click" InputGestureText="Ctrl+R"/>
             </MenuItem>
         </Menu>
-        <TextBlock Text="Assigned Jira Issues" FontWeight="Bold" FontSize="18" Margin="10" Grid.Row="1" VerticalAlignment="Bottom"/>
-        <StackPanel Grid.Row="2" Orientation="Vertical" HorizontalAlignment="Right" Margin="10,0,10,0">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Updated: " FontWeight="Normal" FontSize="12"/>
-                <TextBlock x:Name="UpdatedText" FontWeight="Bold" FontSize="12"/>
-            </StackPanel>
-            <ProgressBar x:Name="RefreshSpinner" Height="18" Width="120" IsIndeterminate="True" Visibility="Collapsed" Margin="0,4,0,0"/>
+        <StackPanel Grid.Row="1" Orientation="Horizontal" Margin="10,0,10,0" x:Name="SearchBarPanel" Visibility="Collapsed" VerticalAlignment="Center" Height="40">
+            <TextBox x:Name="SearchBox" Width="200" Height="30" Margin="0,5,5,5" VerticalAlignment="Center" KeyDown="SearchBox_KeyDown"/>
+            <Button Content="Search" Height="30" MinWidth="70" Margin="0,5,0,5" VerticalAlignment="Center" Click="SearchButton_Click"/>
         </StackPanel>
-        <Grid Grid.Row="3">
+        <TextBlock Text="Assigned Jira Issues" FontWeight="Bold" FontSize="18" Margin="10" Grid.Row="2" VerticalAlignment="Bottom"/>
+        <StackPanel Grid.Row="3" Orientation="Horizontal" HorizontalAlignment="Right" Margin="10,0,10,0">
+            <TextBlock Text="Updated: " FontWeight="Normal" FontSize="12"/>
+            <TextBlock x:Name="UpdatedText" FontWeight="Bold" FontSize="12"/>
+            <ProgressBar x:Name="RefreshSpinner" Height="18" Width="120" IsIndeterminate="True" Visibility="Collapsed" Margin="10,0,0,0"/>
+        </StackPanel>
+        <Grid Grid.Row="4">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
