--- a/JiraHelper.Core/MainWindow.xaml
+++ b/JiraHelper.Core/MainWindow.xaml
@@ -7,16 +7,31 @@
         mc:Ignorable="d"
         Title="Jira Helper" Height="700" Width="1300" MinWidth="600" MinHeight="400">
     <DockPanel>
-        <Menu DockPanel.Dock="Top">
-            <MenuItem Header="File">
-                <MenuItem Header="Dashboard" Click="ShowDashboard_Click"/>
-                <MenuItem Header="Assigned Issues" Click="ShowAssignedIssues_Click"/>
-                <MenuItem Header="Settings" Click="OpenSettings_Click"/>
-                <MenuItem Header="Search" Click="ShowSearchPage_Click" InputGestureText="Ctrl+S"/>
-                <MenuItem Header="Refresh" Click="Refresh_Click" InputGestureText="Ctrl+R"/>
-                <MenuItem Header="Save Time Tracking" Click="SaveTimeTracking_Click"/>
-            </MenuItem>
-        </Menu>
+        <Grid DockPanel.Dock="Left" Width="70" Background="#222" VerticalAlignment="Stretch">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            <!-- Top navigation buttons with icons -->
+            <Button Grid.Row="0" Height="50" Margin="0,20,0,0" Click="ShowDashboard_Click" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+                <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="24" Foreground="White" Text="&#xE80F;" HorizontalAlignment="Center"/>
+            </Button>
+            <Button Grid.Row="1" Height="50" Margin="0,10,0,0" Click="ShowAssignedIssues_Click" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+                <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="24" Foreground="White" Text="&#xE9D5;" HorizontalAlignment="Center"/>
+            </Button>
+            <Button Grid.Row="2" Height="50" Margin="0,10,0,0" Click="ShowSearchPage_Click" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+                <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="24" Foreground="White" Text="&#xE721;" HorizontalAlignment="Center"/>
+            </Button>
+            <!-- Spacer -->
+            <StackPanel Grid.Row="3" Height="1"/>
+            <!-- Settings button at the bottom -->
+            <Button Grid.Row="4" Height="50" Margin="0,10,0,20" VerticalAlignment="Bottom" Click="OpenSettings_Click" Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}">
+                <TextBlock FontFamily="Segoe MDL2 Assets" FontSize="24" Foreground="White" Text="&#xE713;" HorizontalAlignment="Center"/>
+            </Button>
+        </Grid>
         <ContentControl x:Name="MainContentView" HorizontalAlignment="Stretch" VerticalAlignment="Stretch"/>
     </DockPanel>
 </Window>
